# mqtt-server-private-pki

./: .env  Justfile  LICENSE  README.md  pyproject.toml  repomix-output.txt
mosquitto/: mosquitto.conf
mosquitto/certs/: mqtt.example.tld.key  pki.example.tld.crl
pki/easy-rsa/: vars
pki/easy-rsa/pki/: ca.crt  crl.der  index.txt  serial  serial.old
pki/easy-rsa/pki/certs_by_serial/: 86F3422C5FC181B581B9C1A39397E9F0.pem
pki/easy-rsa/pki/inline/: mqtt.example.tld.inline
pki/easy-rsa/pki/private/: ca.key
pki/easy-rsa/pki/reqs/: mqtt.example.tld.req
python_client/: mqtt_pub.py  mqtt_sub.py
